[workspace]
resolver = "2"
members = ["aoc*", "map-parse"]

[workspace.dependencies]

criterion = { version = "*", features = ["html_reports"] }
dhat = "*"
divan = "*"
glam = "*"
itertools = "*"
miette = { version = "*", features = ["fancy"] }
nom = "*"
nom-supreme = "*"
nom_locate = "*"
petgraph = "*"
rayon = "*"
rstest = "*"
rstest_reuse = "*"
test-log = { version = "0.2.14", features = ["log", "trace"] }
thiserror = "*"
eyre = "*"
color-eyre = { version = "*" }
tracing = "*"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
tracing-tracy = "*"
tracy-client = "*"
tracy-client-sys = "*"

[profile.release]
debug = 1
optlevel = "3"


[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = true
