[package]
name = "aoc10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc10"
path = "src/aoc10.rs"

[[bench]]
name = "aoc10"
path = "benches/aoc10.rs"
harness = false

[features]
dhat-heap = []

[dependencies]
glam.workspace = true
divan = { workspace = true }
dhat = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nom.workspace = true
nom-supreme.workspace = true
itertools.workspace = true
test-log.workspace = true
map-parse = { path = "../map-parse/" }
[dev-dependencies]
itertools = { workspace = true }
