[package]
name = "aoc14"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc14"
path = "src/aoc14.rs"

[[bench]]
name = "aoc14"
path = "benches/aoc14.rs"
harness = false

[features]
dhat-heap = []

[dependencies]
dhat.workspace = true
divan.workspace = true
glam.workspace = true
itertools.workspace = true
miette.workspace = true
nom-supreme.workspace = true
nom.workspace = true
rayon.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
test-log.workspace = true
thiserror.workspace = true
tracing-subscriber = { workspace = true }
tracing-tracy.workspace = true
tracing = { workspace = true }
tracy-client-sys.workspace = true
tracy-client.workspace = true
device_query = "2.1.0"

[dev-dependencies]
itertools = { workspace = true }
