[package]
name = "aoc16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc16"
path = "src/aoc16.rs"

[[bench]]
name = "aoc16"
path = "benches/aoc16.rs"
harness = false

[features]
dhat-heap = []

[dependencies]
dhat.workspace = true
divan.workspace = true
glam.workspace = true
itertools.workspace = true
miette.workspace = true
nom-supreme.workspace = true
nom.workspace = true
nom_locate.workspace = true
rayon.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
test-log.workspace = true
thiserror.workspace = true
tracing-subscriber = { workspace = true }
tracing-tracy.workspace = true
tracing = { workspace = true }
tracy-client-sys.workspace = true
tracy-client.workspace = true

[dev-dependencies]
itertools = { workspace = true }
