[package]
name = "aoc18"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc18"
path = "src/aoc18.rs"

[[bench]]
name = "aoc18"
path = "benches/aoc18.rs"
harness = false

[features]
dhat-heap = []

[dependencies]
color-eyre.workspace = true
dhat.workspace = true
divan.workspace = true
glam.workspace = true
itertools.workspace = true
miette.workspace = true
nom-supreme.workspace = true
nom.workspace = true
nom_locate.workspace = true
rayon.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
test-log.workspace = true
thiserror.workspace = true
tracing-subscriber = { workspace = true }
tracing-tracy.workspace = true
tracing = { workspace = true }
tracy-client-sys.workspace = true
tracy-client.workspace = true
petgraph.workspace = true

[dev-dependencies]
itertools = { workspace = true }
