[package]
name = "aoc4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc4"
path = "src/aoc4.rs"

[[bench]]
name = "aoc4"
path = "benches/aoc4.rs"
harness = false

[features]
dhat-heap = []

[dependencies]
divan = { workspace = true }
dhat = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nom.workspace = true
nom-supreme.workspace = true
itertools.workspace = true
test-log.workspace = true
tracing-test = "0.2.5"

[dev-dependencies]
itertools = { workspace = true }
