[package]
name = "aoc6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc6"
path = "src/aoc6.rs"

[[bench]]
name = "aoc6"
path = "benches/aoc6.rs"
harness = false

[features]
dhat-heap = []

[dependencies]
divan = { workspace = true }
dhat = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nom.workspace = true
nom-supreme.workspace = true
itertools.workspace = true
test-log.workspace = true
tracing-test = "0.2.5"
rayon.workspace = true

[dev-dependencies]
itertools = { workspace = true }
