[package]
name = "aoc9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc9"
path = "src/aoc9.rs"

[[bench]]
name = "aoc9"
path = "benches/aoc9.rs"
harness = false

[features]
dhat-heap = []

[dependencies]
divan = { workspace = true }
dhat = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nom.workspace = true
nom-supreme.workspace = true
itertools.workspace = true
test-log.workspace = true
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
rayon.workspace = true

[dev-dependencies]
itertools = { workspace = true }
