[package]
name = "map-parse"
version = "0.1.0"
edition = "2021"

[dependencies]
glam.workspace = true
itertools.workspace = true
nom-supreme.workspace = true
nom.workspace = true
test-log.workspace = true
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
